force-app/main/default/objects/bvd_connector__BvD_Job__c.object
<CustomObject>
    <fields>
        <fullName>bvd_connector__Execution_Time__c</fullName>
        <description>Datetime when BvD Job was executed.</description>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Failure_Reason__c</fullName>
        <label>Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Mapping Conflict</fullName>
                </value>
                <value>
                    <fullName>Orbis Authorization Error</fullName>
                </value>
                <value>
                    <fullName>Service Error</fullName>
                </value>
                <value>
                    <fullName>Execution Error</fullName>
                </value>
                <value>
                    <fullName>Manual Field Mapping</fullName>
                </value>
                <value>
                    <fullName>Manual Start</fullName>
                </value>
                <value>
                    <fullName>Invalid Field Mapping</fullName>
                </value>
                <value>
                    <fullName>Value assignment Error</fullName>
                </value>
                <value>
                    <fullName>DML Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Object__c</fullName>
        <label>Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Processing__c</fullName>
        <label>Processing</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <label>Manual Start</label>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                    <label>Automatic Start</label>
                </value>
                <value>
                    <fullName>Dry Run</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Action Required</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <isActive>false</isActive>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Not processed</fullName>
                    <isActive>false</isActive>
                    <label>Not processed</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                    <isActive>false</isActive>
                    <label>Processed</label>
                </value>
                <value>
                    <fullName>Retrying</fullName>
                    <isActive>false</isActive>
                    <label>Retrying</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Type__c</fullName>
        <description>Insert - Fetch the latest data from Orbis and insert records in Salesforce
            Update - Fetch the latest data from Orbis and update records in Salesforce
            Unlink - This will trigger outbound web service call to unlink data in Orbis</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Unlink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BvD Job</label>
    <listViews>
        <fullName>bvd_connector__All</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Execution_Time__c</columns>
        <columns>bvd_connector__Failure_Reason__c</columns>
        <columns>bvd_connector__Object__c</columns>
        <columns>bvd_connector__Processing__c</columns>
        <columns>bvd_connector__Status__c</columns>
        <columns>bvd_connector__Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOB-{00000}</displayFormat>
        <label>BvD Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BvD Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>